lb scenario added

--- a/src/Webinar/API/Leaderboard/v1/impl.cls
+++ b/src/Webinar/API/Leaderboard/v1/impl.cls
@@ -38,7 +38,7 @@ ClassMethod getPlayers() As %DynamicObject
     			"Id": (rs.%Get("Id")),
     			"Name": (rs.%Get("Name")),
     			"Alias": (rs.%Get("Alias")),
-                "Node": "A"
+                "Node": ($system.INetInfo.LocalHostName())
     		})
     }
     
