oidc scenario added

--- a/src/Webinar/Installer.cls
+++ b/src/Webinar/Installer.cls
@@ -35,6 +35,9 @@ XData Install [ XMLNamespace = INSTALLER ]
             <Invoke Class="Security.Applications" Method="Import" CheckStatus="true">
                 <Arg Value="/opt/webinar/install/webapp-audit.xml"/>
             </Invoke>
+            <Invoke Class="Security.Applications" Method="Import" CheckStatus="true">
+                <Arg Value="/opt/webinar/install/webapp-rest.xml"/>
+            </Invoke>
         </Namespace>
     </Manifest>
 }
